season detail scrollbar fix

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -3,6 +3,7 @@
 	overflow-x: hidden;
 	overflow-y: scroll;
 	scrollbar-width: none;
+	min-height: 100vh;
 	font-family: "Kumbh Sans", sans-serif;
 }
 .app::-webkit-scrollbar {
